update datejs and added fix for footer z-index

--- a/public/css/less/footer.less
+++ b/public/css/less/footer.less
@@ -1,18 +1,9 @@
-#footerContainer {
-  position: fixed;
-  right: 0;
-  left: 0;
-  bottom: -300px;
-  display: block;
-  height: 675px;
-  z-index:4000;
-}
-
 #footer {
-  position: relative;
-  top:300px;
+  position: fixed;
+  bottom:-300px;
 	@navHeight:60px;
   z-index: 4000;
+  width:100%;
 
   #nav-arrow {
 		width: 0;
